# knowit_0.11

./: README.txt  patch.txt
knowit/: AUTHORS  ChangeLog  Doxyfile  NEWS  README  TODO  acinclude.m4  configure.in  configure.in.in  knowit.kdevelop
knowit/admin/: am_edit  cvs.sh
knowit/doc/: Makefile.am
knowit/doc/en/: Makefile.am  index.docbook
knowit/po/: .cvsignore  de.po  es.po  fr.po  hu.po  knowit.pot  pl.po  ru.po  sk.po  zh_CN.GB2312.po
knowit/src/: .cvsignore  Makefile.am  knowit.cpp  knowit.desktop  knowit.h  knowit.lsm  knowitapp.cpp  knowitapp.h  knowitchooser.cpp  knowitchooser.h  knowitedit.cpp  knowitedit.h  knowitlink.cpp  knowitlink.h  knowitlinks.cpp  knowitlinks.h  knowitpref.cpp  knowitpref.h  knowittray.cpp  knowittray.h  knowittree.cpp  knowittree.h  knowitui.rc  main.cpp  notes.cpp  notes.h
knowit/templates/: cpp
